# foodies_fastApi

./: .gitignore  docker-compose.prod.yaml  prod.Dockerfile  pyproject.toml
migrations/: env.py
migrations/versions/: 1093a809d5f1_avatar_changed_in_user_db.py  247091dd8281_add_nullable_thumb_to_categories.py  309edcb2ec3e_modified_table_types.py  371b2da54909_re_init.py  460407338944_init.py  6a9fa43e44c0_added_refresh_token_to_table.py  b3953735f193_new_db.py  de6cc2de91c6_recipe_recipeingredient_update.py
src/: main.py
src/api/: areas.py  auth.py  categories.py  ingredients.py  recipe.py  testimonials.py  users.py  utils.py
src/config/: config.py
src/database/: __init__.py  db.py  ingredient_models.py  models.py  recipe_models.py  seed.py  seed_2.py  taxonomy_models.py  user_models.py
src/repo/: areas_repo.py  categories_repo.py  ingredients_repo.py  recipe_repo.py  testimon_repo.py  user_repo.py
src/schemas/: ingridients.py  recipe.py  taxonomy.py  user.py
src/services/: areas_service.py  auth_service.py  categories_service.py  ingredients_service.py  recipe_service.py  testimonials_serv.py  upload_file.py  user_service.py
