[tool.poetry]
name = "foodies-api"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
sqlalchemy = "^2.0.41"
aiosqlite = "^0.21.0"
asyncpg = "^0.30.0"
pydantic = {extras = ["email"], version = "^2.11.7"}
pydantic-settings = "^2.9.1"
alembic = "^1.16.1"
greenlet = "^3.2.3"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
python-dotenv = "^1.1.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
bcrypt = "<4.1.0"
cloudinary = "^1.44.1"
python-multipart = "^0.0.20"
slowapi = "^0.1.9"
redis = "^6.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
